# type-inference-pass

./: .gitignore  CMakeLists.txt  Makefile  README.md
copy/: SVFTypeInferPass.cpp
src/: CMakeLists.txt  SVFTypeInferPass.cpp
tests/: Makefile  clean.sh  links.sh  run_all.sh
tests/0/: output.txt  print.c  test
tests/1/: output.txt  simple_types.c
tests/2/: print.c
